[gd_scene load_steps=6 format=3 uid="uid://l4enlwyyo2yu"]

[ext_resource type="Script" uid="uid://drb10pfgp4axg" path="res://scenes/game_ui/game_ui.gd" id="1_1i64n"]
[ext_resource type="FontFile" uid="uid://p0h2fmnjf6xq" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="1_sq0em"]

[sub_resource type="LabelSettings" id="LabelSettings_1i64n"]
font = ExtResource("1_sq0em")
font_size = 32
outline_size = 5
outline_color = Color(0.009459546, 0.11643269, 0.2832482, 1)

[sub_resource type="LabelSettings" id="LabelSettings_najyh"]
font = ExtResource("1_sq0em")
font_size = 64
font_color = Color(0.08235294, 0.3647059, 0.7647059, 1)
outline_size = 10
outline_color = Color(0.009459546, 0.11643269, 0.2832482, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2cwxn"]
font = ExtResource("1_sq0em")
font_size = 48
font_color = Color(0.011764706, 1, 0.79607844, 1)
outline_size = 10
outline_color = Color(0.00032046507, 0.16055527, 0.018799763, 1)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1i64n")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "000"
label_settings = SubResource("LabelSettings_1i64n")

[node name="GameOverLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER"
label_settings = SubResource("LabelSettings_najyh")

[node name="PressSpaceLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "PRESSS SPACE"
label_settings = SubResource("LabelSettings_2cwxn")
